k8s/kubevela/test/t1/resources/deploy.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: testsvc
  namespace: default
  labels:
    app.oam.dev/component: testsvc
    app.oam.dev/name: first-vela-app
    app.oam.dev/resourceType: WORKLOAD
    app.oam.dev/revision: testsvc-v1
    application.oam.dev: first-vela-app
    workload.oam.dev/type: webservice
  annotations:
    app.oam.dev/generation: '1'
    deployment.kubernetes.io/revision: '1'
  ownerReferences:
    - apiVersion: core.oam.dev/v1alpha2
      kind: ApplicationConfiguration
      name: first-vela-app
      uid: ab73ea9d-ae51-488f-a0ad-b2f4fbddcff2
      controller: true
      blockOwnerDeletion: true
spec:
  replicas: 1
  selector:
    matchLabels:
      app.oam.dev/component: testsvc
  template:
    metadata:
      labels:
        app.oam.dev/component: testsvc
    spec:
      containers:
        - name: testsvc
          image: crccheck/hello-world
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
